Added Delivery Area component

--- a/misas-thai-street-cuisine-2.0/Pages/Home.razor
+++ b/misas-thai-street-cuisine-2.0/Pages/Home.razor
@@ -3,6 +3,8 @@
 @using Blazorise.Components
 @using Blazorise.Icons.FontAwesome
 
+@using misas_thai_street_cuisine_2._0.Components
+
 <div class="homepage-hero">
     <div class="hero-left">
         <h1 class="hero-title">The<br />Weeknight<br />Bite</h1>
@@ -25,6 +27,8 @@
         </div>
     </div>
 </div>
+
+<DeliveryArea />
 
 <div id="menu-info" class="menu-info-section">
     <h2>Menu Highlights</h2>
