fully fixed carousel issue

--- a/misas-thai-street-cuisine-2.0/Pages/Home.razor
+++ b/misas-thai-street-cuisine-2.0/Pages/Home.razor
@@ -20,7 +20,7 @@
                 @foreach (var image in CarouselImages)
                 {
                     <CarouselSlide Name="@image" key="@image">
-                        <Image Source="@image" Text="Featured Thai Food"/>
+                        <img src="@image" alt="Featured Thai Food" class="carousel-img"/>
                     </CarouselSlide>
                 }
             </Carousel>
