--- a/misas-thai-street-cuisine-2.0/Components/GoogleMap.razor
+++ b/misas-thai-street-cuisine-2.0/Components/GoogleMap.razor
@@ -1,7 +1,7 @@
 @using Microsoft.JSInterop
 
 <div class="google-map-container">
-    <div id="@MapId" style="width:100%;height:300px;"></div>
+    <div id="@MapId"></div>
 </div>
 
 @code {
