--- a/misas-thai-street-cuisine-2.0/Pages/Home.razor
+++ b/misas-thai-street-cuisine-2.0/Pages/Home.razor
@@ -30,9 +30,8 @@
 
 <DeliveryArea />
 
-<div id="menu-info" class="menu-info-section">
-    <h2>Menu Highlights</h2>
-    <p>Explore our signature platters, sausages, and more below!</p>
+<div id="menu-info">
+    <MenuInfo />
 </div>
 
 @code {
